--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         
 
         <section id="about" class="py-20 container mx-auto px-4">
-            <h2 class="text-4xl font-bold text-center mb-12 text-gray-50">Sobre Mim</h2>
+            <h2 class="text-4xl font-bold text-center mb-12 text-gray-50">Sobre</h2>
             <div class="max-w-4xl mx-auto text-lg leading-relaxed text-gray-300 bg-gray-800 p-8 rounded-lg shadow-xl">
                 <p class="mb-4">Professor com formação em Filosofia (UCSal, 1995) e Pedagogia (UNEB, 2006). </p>
                 <p class="mb-4">Atuo no Ensino Fundamental II na Escola Januário Eleodoro de Lima (Salinas da Margarida - BA). Sou criador de plataformas como Literosfera, EduQuest e geradores de prompts com IA, desenvolvendo ferramentas educacionais digitais com códigos web, REA (Recursos Educacionais Abertos) e ODAs (Objetos Digitais de Aprendizagem).</p>
