--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                 <li><a href="#education" class="hover:text-teal-400 transition duration-300">Formação</a></li>
                 <li><a href="#experience" class="hover:text-teal-400 transition duration-300">Experiência</a></li>
                 <li><a href="#projects" class="hover:text-teal-400 transition duration-300">Projetos</a></li>
+                <li><a href="#testimonials" class="hover:text-teal-400 transition duration-300">Depoimentos</a></li>
                 <li><a href="#contact" class="hover:text-teal-400 transition duration-300">Contato</a></li>
             </ul>
             <button id="menu-button" class="md:hidden text-gray-100 hover:text-teal-400 focus:outline-none">
@@ -78,6 +79,7 @@
                 <li><a href="#education" class="block w-full text-center py-2 hover:text-teal-400 transition duration-300">Formação</a></li>
                 <li><a href="#experience" class="block w-full text-center py-2 hover:text-teal-400 transition duration-300">Experiência</a></li>
                 <li><a href="#projects" class="block w-full text-center py-2 hover:text-teal-400 transition duration-300">Projetos</a></li>
+                <li><a href="#testimonials" class="block w-full text-center py-2 hover:text-teal-400 transition duration-300">Depoimentos</a></li>
                 <li><a href="#contact" class="block w-full text-center py-2 hover:text-teal-400 transition duration-300">Contato</a></li>
             </ul>
         </div>
@@ -379,7 +381,7 @@
         <section id="content-production" class="py-20 container mx-auto px-4">
             <h2 class="text-4xl font-bold text-center mb-12 text-gray-50">Produção de Conteúdo</h2>
             <div class="max-w-4xl mx-auto animated-list-item">
-                <a href="https://educacaoecultura.tumblr.com/" target="_blank" class="group inline-flex items-center bg-gray-800 p-6 rounded-xl hover:shadow-lg transition-all duration-300 border border-emerald-500 w-full">
+                <a href="https://educacaoecultura.tumblr.com/" target="_blank" class="group inline-flex items-center bg-gray-800 p-6 rounded-xl hover:shadow-lg transition-all duration-300 border border-emerald-500 w-full mb-4">
                     <i class="fas fa-blog text-emerald-400 text-3xl mr-4"></i>
                     <div>
                         <h3 class="text-2xl font-semibold text-gray-50 group-hover:text-emerald-400 transition-colors">Blog: Educação e Cultura</h3>
@@ -387,9 +389,38 @@
                     </div>
                     <i class="fas fa-external-link-alt text-emerald-400 text-xl ml-auto opacity-75 group-hover:opacity-100 transition-opacity"></i>
                 </a>
+                <a href="https://mecred.mec.gov.br/recurso/364756" target="_blank" class="group inline-flex items-center bg-gray-800 p-6 rounded-xl hover:shadow-lg transition-all duration-300 border border-emerald-500 w-full">
+                    <i class="fas fa-file-alt text-emerald-400 text-3xl mr-4"></i>
+                    <div>
+                        <h3 class="text-2xl font-semibold text-gray-50 group-hover:text-emerald-400 transition-colors">Depoimentos (MECRED)</h3>
+                        <p class="text-gray-300">Confira os depoimentos dos usuários sobre os recursos.</p>
+                    </div>
+                    <i class="fas fa-external-link-alt text-emerald-400 text-xl ml-auto opacity-75 group-hover:opacity-100 transition-opacity"></i>
+                </a>
             </div>
         </section>
 
+        <section id="testimonials" class="py-20 container mx-auto px-4 bg-gray-800 rounded-lg shadow-xl">
+            <h2 class="text-4xl font-bold text-center mb-12 text-gray-50">Depoimentos</h2>
+            <div class="grid md:grid-cols-2 gap-8 max-w-6xl mx-auto">
+                <div class="bg-gray-900 p-8 rounded-lg shadow-lg border border-purple-500 animated-list-item">
+                    <p class="text-gray-300 text-lg italic mb-4">"Eu estou completamente encantada por esse recurso, otimizei meu tempo em 4h semanais que sera poupada do tempo que gastava para realizar meu planejamento, nos moldes manuais, o mais interessante que gostei e que você resolver tudo ali sem a necessidade de abri tantas janelas e comprometendo a velocidade do meu notebook. Eu gosto sempre de fazer a 1ª leitura do prompt criado direto no not após isso reescrevo no caderno, me preocupa se essa comodidade que somos facilmente habituados não acarretara a longo prazo recesso no processo de escrita?"</p>
+                    <p class="text-teal-400 font-semibold">- Michelle Borges</p>
+                </div>
+                <div class="bg-gray-900 p-8 rounded-lg shadow-lg border border-red-500 animated-list-item">
+                    <p class="text-gray-300 text-lg italic mb-4">"Parabéns pela excelente iniciativa Professor. Tu foi gênio pakas viu!"</p>
+                    <p class="text-teal-400 font-semibold">- JOÃO LIMA</p>
+                </div>
+                <div class="bg-gray-900 p-8 rounded-lg shadow-lg border border-green-500 animated-list-item">
+                    <p class="text-gray-300 text-lg italic mb-4">"Parabéns pela iniciativa, sou Professora de Educação Física Escolar e esse aplicativo me ajudará otimizar projetos que estavam parados."</p>
+                    <p class="text-teal-400 font-semibold">- Alexandra Cipriano</p>
+                </div>
+                <div class="bg-gray-900 p-8 rounded-lg shadow-lg border border-blue-500 animated-list-item">
+                    <p class="text-gray-300 text-lg italic mb-4">"Professor Carlos Sérgio, é imperioso, diante do recurso disponibilizado, externar a devida gratidão. Criastes um Recurso Educacional Digital de relevante importância para o contexto hodierno, necessário para docentes utilizarem no cotidiano da prática pedagógica, visando diferentes propostas. Seu trabalho está sendo divulgado e referenciado no meu contexto profissional. Parabéns!"</p>
+                    <p class="text-teal-400 font-semibold">- FRANCISCO GARRIDO DO NASCIMENTO</p>
+                </div>
+            </div>
+        </section>
         
 
         <section id="contact" class="py-20 container mx-auto px-4 bg-gray-800 rounded-lg shadow-xl">
