Remove sensitive personal information from index.html
Removed personal information fields from the HTML.

--- a/index.html
+++ b/index.html
@@ -289,12 +289,8 @@
                     <h3 class="text-2xl font-bold text-teal-400 mb-6 border-b border-gray-700 pb-2">Dados Pessoais</h3>
                     <div class="space-y-3">
                         <p><span class="text-gray-500 font-semibold w-24 inline-block">Nome:</span> <span class="text-gray-200">Carlos Sérgio Araújo da Silva</span></p>
-                        <p><span class="text-gray-500 font-semibold w-24 inline-block">CPF:</span> <span class="text-gray-200">157.606.265-15</span></p>
-                        <p><span class="text-gray-500 font-semibold w-24 inline-block">RG:</span> <span class="text-gray-200">1990364-20</span></p>
-                        <p><span class="text-gray-500 font-semibold w-24 inline-block">Endereço:</span> <span class="text-gray-200">Rua Nauro Campos, 33 - Centro</span></p>
-                        <p><span class="text-gray-500 font-semibold w-24 inline-block">Cidade:</span> <span class="text-gray-200">Salinas da Margarida - BA</span></p>
-                        <p><span class="text-gray-500 font-semibold w-24 inline-block">CEP:</span> <span class="text-gray-200">44450-000</span></p>
-                        <p><span class="text-gray-500 font-semibold w-24 inline-block">Celular:</span> <span class="text-gray-200">(71) 99613-7113</span></p>
+                       <p><span class="text-gray-500 font-semibold w-24 inline-block">Celular:</span> <span class="text-gray-200">(71) 99613-7113</span></p>
+                        <p><span class="text-gray-500 font-semibold w-24 inline-block">E-mail:</span> <span class="text-gray-200">sergioaraujo709@gmail.com</span></p>
                     </div>
                 </div>
 
