--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
         </section>
 
         <section class="py-20 container mx-auto px-4">
-            <h2 class="text-4xl font-bold text-center mb-12 text-gray-50">Certificações em Destaque</h2>
+            <h2 class="text-4xl font-bold text-center mb-12 text-gray-50">Certificações</h2>
             <div class="max-w-4xl mx-auto animated-list-item">
                 <div class="relative group">
                     <div class="absolute -inset-1 bg-gradient-to-r from-teal-400 via-blue-500 to-purple-600 rounded-2xl blur opacity-25 group-hover:opacity-75 transition duration-1000 group-hover:duration-200"></div>
