--- a/index.html
+++ b/index.html
@@ -195,25 +195,17 @@
         </div>
     </div>
 </section>
-        <section id="projects" class="py-20 container mx-auto px-4 bg-gray-800 rounded-lg shadow-xl">
-            <h2 class="text-4xl font-bold text-center mb-12 text-gray-50">Portfólio de Apps educacionais</h2>
-            <div class="max-w-4xl mx-auto flex flex-col items-center justify-center animated-list-item">
-                 
-                <a href="https://escolasergio4-lang.github.io/vitrinedeapps/" target="_blank" class="group block w-full max-w-2xl bg-gray-900 rounded-2xl shadow-2xl overflow-hidden transform hover:scale-105 transition duration-500 border-2 border-teal-500 hover:border-teal-400 relative">
-                    <div class="absolute inset-0 bg-gradient-to-r from-teal-900/50 to-purple-900/50 opacity-0 group-hover:opacity-100 transition-opacity duration-500"></div>
-                    <div class="p-10 text-center relative z-10">
-                        <i class="fas fa-layer-group text-6xl text-teal-400 mb-6 group-hover:text-white transition-colors duration-300"></i>
-                        <h3 class="text-3xl font-bold mb-4 text-white">Acessar Vitrine de Apps</h3>
-                        <p class="text-gray-300 text-lg mb-6">Explore minha coleção completa de aplicativos educacionais, ferramentas interativas e recursos pedagógicos digitais em um só lugar.</p>
-                        <span class="inline-block bg-teal-600 group-hover:bg-teal-500 text-white font-bold py-3 px-8 rounded-full shadow-lg transition duration-300">
-                            Ver Portfólio Completo <i class="fas fa-arrow-right ml-2"></i>
-                        </span>
-                    </div>
-                </a>
-
-            </div>
-        </section>
-
+       <section id="projects" class="py-16 px-4 fade-in">
+    <div class="max-w-3xl mx-auto text-center">
+        <h2 class="text-3xl font-bold mb-8">Portfólio de Apps Educacionais</h2>
+        <a href="https://escolasergio4-lang.github.io/vitrinedeapps/" target="_blank" class="block p-6 bg-cardBg rounded-xl border border-border hover:border-primary transition group">
+            <i class="fas fa-layer-group text-4xl text-primary mb-4"></i>
+            <h3 class="text-xl font-semibold mb-2">Acessar Vitrine de Apps</h3>
+            <p class="text-textGray mb-4">Explore minha coleção de aplicativos educacionais, ferramentas interativas e recursos pedagógicos digitais.</p>
+            <span class="inline-block text-primary font-medium group-hover:underline">Ver portfólio completo →</span>
+        </a>
+    </div>
+</section>
        <section id="content-production" class="py-16 px-4 fade-in">
     <div class="max-w-3xl mx-auto">
         <h2 class="text-3xl font-bold mb-8 text-center">Produção de Conteúdo</h2>
@@ -235,35 +227,28 @@
         </div>
     </div>
 </section>
-        <section id="contact" class="py-20 container mx-auto px-4 bg-gray-800 rounded-lg shadow-xl">
-            <h2 class="text-4xl font-bold text-center mb-12 text-gray-50">Entre em Contato</h2>
-            <div class="max-w-xl mx-auto text-center text-lg text-gray-300">
-                 
-                <div class="mb-10 text-left bg-gray-900 p-8 rounded-lg border border-teal-500/30 shadow-inner">
-                    <h3 class="text-2xl font-bold text-teal-400 mb-6 border-b border-gray-700 pb-2">Dados Pessoais</h3>
-                    <div class="space-y-3">
-                        <p><span class="text-gray-500 font-semibold w-24 inline-block">Nome:</span> <span class="text-gray-200">Carlos Sérgio Araújo da Silva</span></p>
-                        <p><span class="text-gray-500 font-semibold w-24 inline-block">Celular:</span> <span class="text-gray-200">(71) 99613-7113</span></p>
-                    </div>
-                </div>
-
-                <a href="mailto:sergioaraujo709@gmail.com" class="inline-block bg-teal-600 hover:bg-teal-700 text-white font-bold py-3 px-8 rounded-full text-lg transition duration-300 shadow-lg">
-                    Enviar E-mail
-                </a>
-                <p class="mt-6 text-xl">Conecte-se:</p>
-                <div class="flex justify-center space-x-6 mt-4">
-                    <a href="https://www.linkedin.com/in/sergioaraujo709/" target="_blank" class="text-gray-400 hover:text-teal-400 transition duration-300">
-                        <svg class="w-10 h-10" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM4 9h4v12H4zM6 7.5a2 2 0 11-4 0 2 2 0 014 0z"></path></svg>
-                    </a>
-                    <a href="https://github.com/zonaeducacional" target="_blank" class="text-gray-400 hover:text-teal-400 transition duration-300">
-                        <svg class="w-10 h-10" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M12 2C6.477 2 2 6.477 2 12c0 4.42 2.864 8.17 6.84 9.49.5.09.68-.21.68-.47v-1.68c-2.78.6-3.37-1.34-3.37-1.34-.45-1.14-1.1-1.45-1.1-1.45-.9-.62.07-.61.07-.61 1 .07 1.53 1.03 1.53 1.03.88 1.5 2.3 1.07 2.87.82.09-.62.34-1.07.62-1.31-2.18-.25-4.47-1.09-4.47-4.84 0-1.07.38-1.95 1.02-2.64-.1-.25-.44-1.25.1-2.6 0 0 .82-.26 2.7-.98 1.9.27 3.93.27 5.83 0 1.88.72 2.7 1 2.7 1 .54 1.35.2 2.35.1 2.6.64.69 1.02 1.57 1.02 2.64 0 3.76-2.3 4.58-4.48 4.83.35.3.67.92.67 1.85v2.74c0 .26.18.57.69.47A9.98 9.98 0 0022 12c0-5.523-4.477-10-10-10z" clip-rule="evenodd"></path></svg>
-                    </a>
-                     <a href="https://github.com/sergiodeplus" target="_blank" class="text-gray-400 hover:text-teal-400 transition duration-300">
-                        <svg class="w-10 h-10" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M12 2C6.477 2 2 6.477 2 12c0 4.42 2.864 8.17 6.84 9.49.5.09.68-.21.68-.47v-1.68c-2.78.6-3.37-1.34-3.37-1.34-.45-1.14-1.1-1.45-1.1-1.45-.9-.62.07-.61.07-.61 1 .07 1.53 1.03 1.53 1.03.88 1.5 2.3 1.07 2.87.82.09-.62.34-1.07.62-1.31-2.18-.25-4.47-1.09-4.47-4.84 0-1.07.38-1.95 1.02-2.64-.1-.25-.44-1.25.1-2.6 0 0 .82-.26 2.7-.98 1.9.27 3.93.27 5.83 0 1.88.72 2.7 1 2.7 1 .54 1.35.2 2.35.1 2.6.64.69 1.02 1.57 1.02 2.64 0 3.76-2.3 4.58-4.48 4.83.35.3.67.92.67 1.85v2.74c0 .26.18.57.69.47A9.98 9.98 0 0022 12c0-5.523-4.477-10-10-10z" clip-rule="evenodd"></path></svg>
-                    </a>
-                </div>
-            </div>
-        </section>
+       <section id="contact" class="py-16 px-4 fade-in">
+    <div class="max-w-xl mx-auto text-center">
+        <h2 class="text-3xl font-bold mb-8">Contato</h2>
+        <div class="bg-cardBg p-6 rounded-xl border border-border mb-8 text-left">
+            <h3 class="font-semibold text-primary mb-3">Dados Pessoais</h3>
+            <p><span class="font-medium">Nome:</span> Carlos Sérgio Araújo da Silva</p>
+            <p><span class="font-medium">Celular:</span> (71) 99613-7113</p>
+        </div>
+        <a href="mailto:sergioaraujo709@gmail.com" class="inline-block bg-primary text-white font-semibold py-3 px-7 rounded-full hover:bg-primaryLight transition mb-6">Enviar e-mail</a>
+        <div class="flex justify-center space-x-5 mt-6">
+            <a href="https://www.linkedin.com/in/sergioaraujo709/" target="_blank" class="text-textGray hover:text-primary transition">
+                <i class="fab fa-linkedin-in text-xl"></i>
+            </a>
+            <a href="https://github.com/zonaeducacional" target="_blank" class="text-textGray hover:text-primary transition">
+                <i class="fab fa-github text-xl"></i>
+            </a>
+            <a href="https://github.com/sergiodeplus" target="_blank" class="text-textGray hover:text-primary transition">
+                <i class="fab fa-github text-xl"></i>
+            </a>
+        </div>
+    </div>
+</section>
     </main>
 
     <footer class="bg-gray-900 text-white py-8">
