Revise 'about' section layout and content

--- a/index.html
+++ b/index.html
@@ -95,14 +95,18 @@
             </div>
         </section>
 
-        <section id="about" class="py-20 container mx-auto px-4">
-            <h2 class="text-4xl font-bold text-center mb-12 text-gray-50">Sobre</h2>
-            <div class="max-w-4xl mx-auto text-lg leading-relaxed text-gray-300 bg-gray-800 p-8 rounded-lg shadow-xl">
-                <p class="mb-4">Professor com formação em Filosofia (UCSal, 1995) e Pedagogia (UNEB, 2006). </p>
-                <p class="mb-4">Atuo no Ensino Fundamental II na Escola Januário Eleodoro de Lima (Salinas da Margarida - BA). Sou criador de plataformas como Literosfera, EduQuest e geradores de prompts com IA, desenvolvendo ferramentas educacionais digitais com códigos web, REA (Recursos Educacionais Abertos) e ODAs (Objetos Digitais de Aprendizagem).</p>
-                <p class="mb-4">Meu trabalho foca numa pedagogia construtivista-interacionista, crítica e transformadora. Sou servidor efetivo desde 1997, com experiência na coordenação de programas de alfabetização e gestão educacional municipal (2010-2018).</p>
+       <section id="about" class="py-16 px-4 fade-in">
+    <div class="max-w-3xl mx-auto">
+        <h2 class="text-3xl font-bold mb-8 text-center">Sobre mim</h2>
+        <div class="bg-cardBg p-6 rounded-xl border border-border">
+            <div class="space-y-4 text-textGray leading-relaxed">
+                <p>Professor com formação em Filosofia (UCSal, 1995) e Pedagogia (UNEB, 2006).</p>
+                <p>Atuo no Ensino Fundamental II na Escola Januário Eleodoro de Lima (Salinas da Margarida – BA). Sou criador de plataformas como <strong>Literosfera</strong>, <strong>EduQuest</strong> e geradores de prompts com IA, desenvolvendo ferramentas educacionais digitais com códigos web, REA (Recursos Educacionais Abertos) e ODAs (Objetos Digitais de Aprendizagem).</p>
+                <p>Meu trabalho foca numa pedagogia construtivista-interacionista, crítica e transformadora. Sou servidor efetivo desde 1997, com experiência na coordenação de programas de alfabetização e gestão educacional municipal (2010–2018).</p>
             </div>
-        </section>
+        </div>
+    </div>
+</section>
 
        <section id="education" class="py-16 px-4 fade-in">
     <div class="max-w-4xl mx-auto">
