Revamp experience section in index.html
Updated the experience section layout and styling for better presentation.

--- a/index.html
+++ b/index.html
@@ -144,43 +144,44 @@
         </div>
     </div>
 </section>
-        <section id="experience" class="py-20 container mx-auto px-4">
-            <h2 class="text-4xl font-bold text-center mb-12 text-gray-50">Experiência Profissional</h2>
-            <div class="grid md:grid-cols-2 gap-12 max-w-5xl mx-auto">
-                <div class="bg-gray-800 p-8 rounded-lg shadow-lg border border-orange-500 animated-list-item">
-                    <h3 class="text-2xl font-semibold mb-2 text-teal-400">Professor de História e LPT</h3>
-                    <p class="text-gray-400 mb-2">Escola Januário Eleodoro de Lima • Salinas da Margarida - BA</p>
-                    <p class="text-gray-500 mb-4">Atual</p>
-                    <ul class="list-disc list-inside text-gray-300 space-y-2">
-                        <li>Atuação no Ensino Fundamental II.</li>
-                        <li>Implementação de metodologias de ensino inovadoras.</li>
-                        <li>Desenvolvimento de materiais didáticos digitais.</li>
-                    </ul>
-                </div>
-                <div class="bg-gray-800 p-8 rounded-lg shadow-lg border border-red-500 animated-list-item">
-                    <h3 class="text-2xl font-semibold mb-2 text-teal-400">Professor de Filosofia</h3>
-                    <p class="text-gray-400 mb-2">Colégio Estadual Juracy Magalhães</p>
-                    <p class="text-gray-500 mb-4">2001 – 2004</p>
-                    <ul class="list-disc list-inside text-gray-300 space-y-2">
-                        <li>Ensino de conceitos filosóficos e pensamento crítico.</li>
-                        <li>Preparo de aulas e atividades interativas.</li>
-                        <li>Participação ativa no corpo docente e em eventos escolares.</li>
-                    </ul>
-                </div>
-                 <div class="bg-gray-800 p-8 rounded-lg shadow-lg border border-purple-500 md:col-span-2 animated-list-item">
-                    <h3 class="text-2xl font-semibold mb-2 text-teal-400">Desenvolvedor de Projetos Educacionais</h3>
-                    <p class="text-gray-400 mb-2">Literosfera, EduQuest, WebVersos</p>
-                    <p class="text-gray-500 mb-4">Desde 2018 (Estimativa)</p>
-                    <ul class="list-disc list-inside text-gray-300 space-y-2">
-                        <li>Criação de plataformas educacionais digitais.</li>
-                        <li>Desenvolvimento de geradores de prompts com IA para professores.</li>
-                        <li>Produção de Recursos Educacionais Abertos (REA) e Objetos Digitais de Aprendizagem (ODAs).</li>
-                        <li>Foco na inovação pedagógica e transformação digital na educação.</li>
-                    </ul>
-                </div>
+       <section id="experience" class="py-16 px-4 fade-in">
+    <div class="max-w-4xl mx-auto">
+        <h2 class="text-3xl font-bold mb-10 text-center">Experiência Profissional</h2>
+        <div class="space-y-8">
+            <div class="p-6 border border-border rounded-xl hover:border-primary transition bg-cardBg">
+                <h3 class="text-xl font-semibold text-primary">Professor de História e LPT</h3>
+                <p class="text-sm text-textGray mb-2">Escola Januário Eleodoro de Lima • Salinas da Margarida – BA</p>
+                <p class="text-sm text-textGray mb-3">Atual</p>
+                <ul class="list-disc list-inside text-sm text-textGray space-y-1">
+                    <li>Atuação no Ensino Fundamental II.</li>
+                    <li>Implementação de metodologias de ensino inovadoras.</li>
+                    <li>Desenvolvimento de materiais didáticos digitais.</li>
+                </ul>
             </div>
-        </section>
 
+            <div class="p-6 border border-border rounded-xl hover:border-primary transition bg-cardBg">
+                <h3 class="text-xl font-semibold text-primary">Professor de Filosofia</h3>
+                <p class="text-sm text-textGray mb-2">Colégio Estadual Juracy Magalhães</p>
+                <p class="text-sm text-textGray mb-3">2001 – 2004</p>
+                <ul class="list-disc list-inside text-sm text-textGray space-y-1">
+                    <li>Ensino de conceitos filosóficos e pensamento crítico.</li>
+                    <li>Preparo de aulas e atividades interativas.</li>
+                </ul>
+            </div>
+
+            <div class="p-6 border border-border rounded-xl hover:border-primary transition bg-cardBg">
+                <h3 class="text-xl font-semibold text-primary">Desenvolvedor de Projetos Educacionais</h3>
+                <p class="text-sm text-textGray mb-2">Literosfera, EduQuest, WebVersos</p>
+                <p class="text-sm text-textGray mb-3">Desde 2018</p>
+                <ul class="list-disc list-inside text-sm text-textGray space-y-1">
+                    <li>Criação de plataformas educacionais digitais.</li>
+                    <li>Desenvolvimento de geradores de prompts com IA para professores.</li>
+                    <li>Produção de REA e ODAs com foco em inovação pedagógica.</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</section>
      <section class="py-16 px-4 fade-in">
     <div class="max-w-3xl mx-auto text-center">
         <h2 class="text-3xl font-bold mb-8">Certificações</h2>
