Update job title for history and literature professor

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <h2 class="text-3xl font-bold mb-10 text-center">Experiência Profissional</h2>
         <div class="space-y-8">
             <div class="p-6 border border-border rounded-xl hover:border-primary transition bg-cardBg">
-                <h3 class="text-xl font-semibold text-primary">Professor de História e LPT</h3>
+                <h3 class="text-xl font-semibold text-primary">Professor de História e Literatura e Produção Textual</h3>
                 <p class="text-sm text-textGray mb-2">Escola Januário Eleodoro de Lima • Salinas da Margarida – BA</p>
                 <p class="text-sm text-textGray mb-3">Atual</p>
                 <ul class="list-disc list-inside text-sm text-textGray space-y-1">
